# chatroom-gpt

admin/: README.md  app-config.json  application-properties.json  main.py  pyproject.toml
admin/src/: errors.py
admin/src/controller/: chat_room_controller.py  chatroom_controller.py  commons.py  schema.py
admin/src/dev/: devlopment_service.py
admin/src/repository/: commons.py  models.py  repository.py
admin/src/service/: chat_room_service.py
admin/src/service/messaging/: chat_message_service.py  kafka_service.py
chatroom-socket/: README.md  go.mod  go.sum
chatroom-socket/cmd/api/: main.go
chatroom-socket/internal/: commons.go
chatroom-socket/internal/repository/: chat_message_repository.go  chat_room_repository.go  models.go
chatroom-socket/internal/server/: server.go
chatroom-socket/internal/service/: assistant_service.go  chat_message_service.go  model_initializer.go  room_service.go  socket_message_handler.go  socket_service.go  view.go
chatroom-socket/internal/web/: commons.go
chatroom-socket/internal/web/controller/: assistant_controller.go  chat_message_controller.go  chat_room_controller.go  room_controller.go  socket_controller.go
chatroom-socket/internal/web/middleware/: auth_middleware.go  logging_middleware.go
